--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "hammerjs": "^2.0.8",
     "mat-video": "^2.7.2",
     "ngx-mask": "^8.1.7",
+    "ngx-webcam": "^0.3.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
