--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@swimlane/ngx-charts": "^13.0.2",
     "hammerjs": "^2.0.8",
     "mat-video": "^2.7.2",
+    "ngx-image-compress": "^8.0.4",
     "ngx-mask": "^8.1.7",
     "ngx-webcam": "^0.3.0",
     "rxjs": "~6.5.4",
